<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:animateLayoutChanges="true"
        tools:context="org.walleth.activities.ImportKeyActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioGroup android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/key_type_select"
                        android:layout_below="@id/account_name_container">


                <RadioButton android:layout_width="wrap_content"
                             android:id="@+id/type_wordlist_select"
                             android:layout_height="wrap_content"
                             android:text="WordList"/>

                <RadioButton android:layout_width="wrap_content"
                             android:id="@+id/type_json_select"
                             android:layout_height="wrap_content"
                             android:text="JSON"/>

                <RadioButton android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/type_ecdsa_select"
                             android:text="ECDSA"/>

            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/key_container"
                    android:layout_below="@id/key_type_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/key_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:importantForAccessibility="no"
                        android:fontFamily="sans-serif"
                        android:textSize="16sp"
                        android:padding="16dp"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_container"
                    style="@style/password_textinputlayout"
                    android:hint="@string/key_import_password_input_hint"
                    android:layout_below="@id/key_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:importantForAccessibility="no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif"
                        android:textSize="16sp"
                        android:padding="16dp"/>
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>
    </ScrollView>


    <com.dmitrymalkovich.android.ProgressFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|right"
            android:clickable="true">

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                app:srcCompat="@drawable/ic_action_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:id="@+id/fab_progress_bar"
                android:visibility="invisible"
                android:indeterminateTint="@color/colorPrimary"
                android:indeterminateTintMode="src_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </com.dmitrymalkovich.android.ProgressFloatingActionButton>

</FrameLayout>
