...
        <item>Add token definition</item>
    </array>


    <string name="day_or_night">Day or Night</string>
    <string name="day_or_night_summary">There is a light and a dark theme</string>
    <string name="dialog_title_success">Success</string>
    <string name="dialog_title_error">Error</string>

    <string name="select_fiat_reference">Select (Fiat) Reference</string>
    <string name="preferences_no_screenshots_title">Prevent ScreenShots</string>
    <string name="select_token">Select Token</string>
    <string name="create_account_subtitle">Create Account</string>
    <string name="open_in_blockexplorer">Open in BlockExplorer</string>
...
